--- a/app/src/main/res/layout/item_orden_servicio.xml
+++ b/app/src/main/res/layout/item_orden_servicio.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:background="#FFFFFF"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
@@ -106,6 +106,7 @@
             android:id="@+id/btnDetallesOrdenServicio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#BF364A"
             android:text="Más Detalles" />
 
     </LinearLayout>
