--- a/app/src/main/res/layout/lista_servicio_activity.xml
+++ b/app/src/main/res/layout/lista_servicio_activity.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     app:layoutDescription="@xml/activity_servicio_main_scene"
     tools:context=".activities.activitiesServicio.ServicioActivity">
 
@@ -13,7 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="Listado de Servicios"
+        android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +31,9 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="31dp"
+        android:backgroundTint="#D73A4B"
         android:text="Agregar Servicio"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/btnRegresarServicio"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +46,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +59,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
+        android:backgroundTint="#D73A4B"
         android:text="Regresar al menú"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 </androidx.constraintlayout.motion.widget.MotionLayout>
