--- a/app/src/main/res/layout/activity_agregar_cliente.xml
+++ b/app/src/main/res/layout/activity_agregar_cliente.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,102 +16,122 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nuevo Cliente"
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginBottom="24dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="Nuevo Cliente"
+            android:textColor="#000000"
+            android:textColorLink="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Identificación:"
             android:layout_marginTop="16dp"
-            android:textStyle="bold"/>
+            android:text="Identificación:"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etIdCliente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Cédula o Ruc del Cliente"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Nombre:"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"/>
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nombre del Cliente"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Dirección:"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"/>
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etDireccion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Dirección del Cliente"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Teléfono:"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"/>
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etTelefono"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Teléfono del Cliente"
-            android:inputType="phone" />
+            android:inputType="phone"
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Tipo de Cliente:"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"/>
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <Spinner
             android:id="@+id/spnTipoCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#000000"
+            android:backgroundTintMode="multiply"
             android:entries="@array/tipos_cliente" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
             android:gravity="center"
-            android:layout_marginTop="16dp">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnVolver"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Volver" />
+                android:backgroundTint="#C9374E"
+                android:text="Volver"
+                android:textColor="@color/white"
+                android:textColorLink="#FFFFFF" />
 
             <Button
                 android:id="@+id/btnGuardar"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:backgroundTint="#D73A4B"
                 android:onClick="guardar"
-                android:text="Guardar" />
+                android:text="Guardar"
+                android:textColor="@color/white"
+                android:textColorLink="#FFFFFF" />
         </LinearLayout>
 
     </LinearLayout>
