--- a/app/src/main/res/layout/activity_agregar_orden_servicio.xml
+++ b/app/src/main/res/layout/activity_agregar_orden_servicio.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".activities.activitiesOrdenServicio.AgregarOrdenServicio">
 
     <TextView
@@ -12,7 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="Orden de Servicio"
+        android:textColor="#000000"
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,11 +24,12 @@
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="90dp"
-        android:layout_height="40dp"
+        android:layout_width="94dp"
+        android:layout_height="42dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
-        android:text="o Seleccione un Cliente:"
+        android:text="Seleccione un Cliente:"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -43,8 +47,8 @@
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:ems="10"
-        android:inputType="date"
         android:hint="dd-MM-yyyy"
+        android:inputType="date"
         app:layout_constraintStart_toStartOf="@+id/spnClienteOS"
         app:layout_constraintTop_toTopOf="@+id/textView14" />
 
@@ -55,6 +59,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
         android:text="Fecha:"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -66,6 +71,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
         android:text="Tipo de Vehiculo:"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
@@ -84,6 +90,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
         android:text="Placa"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
@@ -95,6 +102,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="Servicio:"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -106,6 +114,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="Servicios Agregados:"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnAgregarServicioOS" />
@@ -117,6 +126,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
         android:text="Total: $"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnGuardarOS"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,8 +137,8 @@
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:ems="10"
-        android:inputType="text"
         android:hint="ABC-123"
+        android:inputType="text"
         app:layout_constraintStart_toStartOf="@+id/spnVehiculoOS"
         app:layout_constraintTop_toTopOf="@+id/textView17" />
 
@@ -145,8 +155,8 @@
         android:layout_height="48dp"
         android:layout_marginEnd="10dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="Cantidad"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/spnNombreServicio" />
 
@@ -157,7 +167,10 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
+        android:backgroundTint="#C9374E"
         android:text="Agregar Servicio"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
@@ -182,7 +195,10 @@
         android:layout_height="52dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="2dp"
+        android:backgroundTint="#D73A4B"
         android:text="Guardar Orden de Servicio"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -205,6 +221,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
         android:text="Técnico encargado:"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
@@ -221,7 +238,10 @@
         android:layout_width="150dp"
         android:layout_height="52dp"
         android:layout_marginEnd="10dp"
+        android:backgroundTint="#D73A4B"
         android:text="Cancelar y volver"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/btnGuardarOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnGuardarOS" />
