--- a/app/src/main/res/layout/activity_agregar_servicio.xml
+++ b/app/src/main/res/layout/activity_agregar_servicio.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".activities.activitiesServicio.AgregarServicio">
 
     <TextView
@@ -12,9 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="Ingreso de Servicio"
-        android:textStyle="bold"
+        android:textColor="#000000"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +29,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="5dp"
         android:text="Nombre del Servicio"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/etNombreServicio"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -62,6 +66,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="5dp"
         android:text="Precio del Servicio"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/etPrecioServicio"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -70,7 +75,10 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#D73A4B"
         android:text="Guardar"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPrecioServicio" />
@@ -80,7 +88,10 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#C9374E"
         android:text="Cancelar"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
