--- a/app/src/main/res/layout/activity_editar_servicio.xml
+++ b/app/src/main/res/layout/activity_editar_servicio.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".activities.activitiesServicio.EditarServicio">
 
     <TextView
@@ -12,7 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="Edición del Servicio"
+        android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:text="Nuevo nombre del Servicio:"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/etNewNombreServicio"
         tools:layout_editor_absoluteX="16dp" />
 
@@ -58,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:text="Nuevo precio del Servicio:"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/etNewPrecioServicio"
         app:layout_constraintStart_toStartOf="@+id/textView6" />
 
@@ -66,7 +71,10 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#D73A4B"
         android:text="Guardar"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/etNewPrecioServicio"
         app:layout_constraintStart_toStartOf="@+id/etNewPrecioServicio"
         app:layout_constraintTop_toBottomOf="@+id/etNewPrecioServicio" />
@@ -76,7 +84,10 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#D73A4B"
         android:text="Cancelar"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/btnGuardarServicio"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="@+id/btnGuardarServicio"
@@ -88,6 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Antiguo Nombre"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/textView2"
