--- a/app/src/main/res/layout/item_servicio_os.xml
+++ b/app/src/main/res/layout/item_servicio_os.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:background="#FFFFFF"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
@@ -13,9 +14,9 @@
         android:layout_width="402dp"
         android:layout_height="104dp"
         android:orientation="horizontal"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="67dp"
-        tools:ignore="MissingConstraints">
+        tools:layout_editor_absoluteY="67dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,7 +109,9 @@
                 android:layout_width="190dp"
                 android:layout_height="33dp"
                 android:layout_weight="1"
-                android:text="Descartar" />
+                android:backgroundTint="#BF364A"
+                android:text="Descartar"
+                android:textColor="#FFFFFF" />
 
         </LinearLayout>
 
