--- a/app/src/main/res/layout/lista_factura_activity.xml
+++ b/app/src/main/res/layout/lista_factura_activity.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#FFFFFF"
     tools:context=".activities.activitiesFactura.FacturaActivity">
 
     <TextView
@@ -12,9 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="Listado de Facturas Generadas a Empresas"
-        android:textStyle="bold"
+        android:textColor="#000000"
         android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +29,9 @@
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#C53845"
         android:text="Generar Factura"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -35,7 +40,9 @@
         android:layout_width="136dp"
         android:layout_height="55dp"
         android:layout_marginEnd="20dp"
+        android:backgroundTint="#D73A4B"
         android:text="Regresar"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnGenerarFactura" />
 
