--- a/app/src/main/res/layout/lista_orden_servicio_activity.xml
+++ b/app/src/main/res/layout/lista_orden_servicio_activity.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="#FFFFFF"
     tools:context=".activities.activitiesOrdenServicio.OrdenServicioActivity">
 
 
@@ -13,7 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="Listado de Ordenes de Servicio"
+        android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/rvOrdenServicio"
@@ -28,7 +31,9 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="31dp"
+        android:backgroundTint="#B2344B"
         android:text="Agregar Orden de Servicio"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/btnRegresarOrdenServicio"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +58,9 @@
         android:layout_marginStart="31dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
+        android:backgroundTint="#C03849"
         android:text="Regresar al menú"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnAgregarOrdenServicio"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
