--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -83,6 +83,7 @@
             android:id="@+id/btnEditarServicio"
             android:layout_width="370dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#BF364A"
             android:text="Editar" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
